force-app/main/default/objects/SFDC_Enhancement__c/SFDC_Enhancement__c.object-meta.xml
<CustomObject>
    <label>SFDC Enhancement</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SFDC Enhancement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Enhancements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>