force-app/main/default/objects/SFDC_Enhancement__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Groups</fullName>
                <default>true</default>
                <label>All Groups</label>
            </value>
            <value>
                <fullName>G100 Network</fullName>
            </value>
            <value>
                <fullName>High Lantern Group</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>The Miles Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>