force-app/main/default/objects/SFDC_Enhancement__c/fields/Level_Of_Effort_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Effort_Estimate__c</fullName>
    <label>Level Of Effort Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>