force-app/main/default/objects/SFDC_Enhancement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>Data Migration Issue</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Functional Issue</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Task List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>